@@ -1,3 +1,12 @@
+2011-09-19  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        [GTK] Fix distcheck build
+        https://bugs.webkit.org/show_bug.cgi?id=68241
+
+        Reviewed by Martin Robinson.
+
+        * GNUmakefile.list.am:
+
 2011-09-18  Dan Bernstein  <mitz@apple.com>
 
         Removed ProfilerServer.
